2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Data.Sql/Makefile.am, Mono.Data.Sql/Mono.Data.Sql.mdp: Reference
	  shared assemblies from the correct location. Added missing assembly
	  reference.
	* MonoQuery/Makefile.am, MonoQuery/MonoQuery.mdp: Reference shared
	  assemblies from the correct location.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoQuery/Makefile.am, MonoQuery/MonoQuery.addin.xml,
	  MonoQuery/MonoQuery.mdp: Migration to Mono.Addins.

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* tests/Mono.Data.Sql.Tests.mdp, Mono.Data.Sql/Mono.Data.Sql.mdp,
	  MonoQuery/MonoQuery.mdp: Don't copy referenced assemblies.

2007-02-22  Atsushi Enomoto  <atsushi@ximian.com>

	* Mono.Data.Sql/Providers/NpgsqlDbProvider.cs : pgsql somehow
	  returns user ID as int64 while it should be int32, so using
	  GetValue() here.

2007-02-20  Ankit Jain  <jankit@novell.com>

	* MonoQuery/Commands/Commands.cs (Run): Handle empty connection string.
	Destroy the dialog even if an exception is thrown.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoQuery/MonoQuery.addin.xml: Change add-in versions to 0.13.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Data.Sql.mds, tests/Mono.Data.Sql.Tests.mdp,
	  Mono.Data.Sql/Makefile.am, Mono.Data.Sql/Mono.Data.Sql.mdp,
	  MonoQuery/Makefile.am, MonoQuery/MonoQuery.mdp: Synchronized the MD
	  project and the Makefile

2007-02-06  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* MonoQuery/MonoQuery.addin.xml: added translatable string for SQL definition pad

2006-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoQuery/MonoQueryService.cs: Use the FileService for copying and
	  deleting files.

2006-09-18  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* Mono.Data.Sql.mds:
	* tests/Mono.Data.Sql.Tests.mdp:
	* Mono.Data.Sql/Mono.Data.Sql.mdp:
	* MonoQuery/MonoQuery.mdp:
	Updated.

2006-09-15 Jimmy <jkernel1234@bellsouth.net>

	* Mono.Data.Sql/Providers/SqliteDbProvider.cs: