@@ -72,11 +72,11 @@ REFS =  \
 	$(GLADE_SHARP_LIBS) \
 	$(GTK_SHARP_LIBS) \
 	$(GTKSOURCEVIEW_SHARP_LIBS) \
+	-r:$(top_builddir)/build/AddIns/MonoDevelop.Components.dll \
+	-r:$(top_builddir)/build/AddIns/MonoDevelop.Core.Gui.dll \
+	-r:$(top_builddir)/build/AddIns/MonoDevelop.Ide.dll \
 	-r:$(top_builddir)/build/AddIns/MonoQuery/Mono.Data.Sql.dll \
-	-r:$(top_srcdir)/build/AddIns/MonoDevelop.Components.dll \
-	-r:$(top_srcdir)/build/AddIns/MonoDevelop.Core.Gui.dll \
-	-r:$(top_srcdir)/build/AddIns/MonoDevelop.Ide.dll \
-	-r:$(top_srcdir)/build/bin/MonoDevelop.Core.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
 	-r:$(top_srcdir)/contrib/Mono.Addins.dll \
 	-r:System \
 	-r:System.Data \
