@@ -1,3 +1,8 @@
+2007-05-10  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Data.Sql/Makefile.am, Mono.Data.Sql/Mono.Data.Sql.mdp,
+	  MonoQuery/Makefile.am, MonoQuery/MonoQuery.mdp: Fix build.
+
 2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Data.Sql/Makefile.am, Mono.Data.Sql/Mono.Data.Sql.mdp: Reference
